# diffscape

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  diff_file.rs  main.rs  test.rs
src/ui/: diff_utils.rs  footer.rs  highlight_line.rs  mod.rs  render_ui.rs  side_by_side_diff.rs  unified_diff.rs
