[package]
name = "diffscape"
version = "0.1.3"
edition = "2024"
authors = ["David Bradford <dbradf@gmail.com>"]
description = "A fast, beautiful Terminal User Interface (TUI) for viewing git diffs with syntax highlighting"
readme = "README.md"
homepage = "https://github.com/dbradf/diffscape"
repository = "https://github.com/dbradf/diffscape"
license = "MIT"
keywords = ["git", "diff", "tui", "terminal", "syntax-highlighting"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
syntect = "5.1"
similar = "2.6"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "thin"
